# rust-synctubebot

./: Cargo.toml
src/: main.rs
src/infrastructure/: client.rs  mod.rs
src/infrastructure/synctube_client/: model.rs
