[package]
name = "rust-synctubebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.72"
futures-channel = "0.3.28"
futures-util = "0.3.28"
http = "0.2.9"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = ["native-tls"] }
url = "2.4.0"
